force-app/main/default/objects/Stock_Transfer_Line__c/Stock_Transfer_Line__c.object-meta.xml
<CustomObject>
    <label>Stock Transfer Line</label>
    <nameField>
        <displayFormat>STLI-{000000}</displayFormat>
        <label>Stock Transfer Line Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock Transfer Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>