force-app/main/default/objects/Stock_Transfer_Line__c/fields/Inventory_Item__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Item</label>
    <referenceTo>Inventory_Item__c</referenceTo>
    <relationshipLabel>Stock Transfer Lines</relationshipLabel>
    <relationshipName>Stock_Transfer_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>