force-app/main/default/objects/Stock_Transfer_Line__c/fields/Transfer_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Quantity__c</fullName>
    <label>Transfer Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>